# openclaw-homekit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/openclaw_homekit/: __init__.py  skill.py
tests/: conftest.py  test_skill.py
