[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-homekit"
version = "0.1.0"
description = "HomeKit Skill for OpenClaw - Direct HomeKit device control via aiohomekit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OpenClaw Contributors", email = "info@openclaw.ai"}
]
keywords = ["openclaw", "homekit", "smart-home", "ai", "skills"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]

dependencies = [
    "openclaw-python-skill>=0.1.0",
    "aiohomekit>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
]

[project.urls]
Repository = "https://github.com/kasi09/openclaw-homekit"
Issues = "https://github.com/kasi09/openclaw-homekit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openclaw_homekit = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["openclaw_python_skill.*", "aiohomekit.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/openclaw_homekit --cov-report=term-missing"
asyncio_mode = "auto"
